<resources>
    <!-- App name -->
    <string name="app_name" translatable="false">Farhang</string>

    <!-- Letters -->
    <string name="letter_1">ғ</string>
    <string name="letter_2">ӣ</string>
    <string name="letter_3">қ</string>
    <string name="letter_4">ӯ</string>
    <string name="letter_5">ҳ</string>
    <string name="letter_6">ҷ</string>

    <string name="search">Поиск</string>
    <string name="favorites">Избранные</string>
    <string name="info">О приложении</string>
    <string name="phrasebook">Разговорник</string>
    <string name="note">Ёднома</string>

    <string name="app_version_string">Версия: <b>1.3.0</b></string>
    <string name="github_string">Github: github.com/boronov</string>
    <string name="telegram_string">Telegram: t.me/boronov_11</string>
    <string name="app_count_word">Слов в словаре: <b>191108</b></string>
    <string name="app_count_phrases">Фраз в разговорнике: <b>2450</b></string>
    <string name="app_count_note">Правил в ёдноме: <b>150</b></string>
    <string name="rate_app">Оценить приложение</string>

    <string name="inter_word">Введите слово</string>
    <string name="copy">Скопировано</string>
    <string name="copy_tj">Скопировать фразу</string>
    <string name="copy_ru">Скопировать перевод фразы</string>

    <string name="note_title">"В этом сборнике собраны основные правила таджикского языка. Рекомендуется ученикам, учителям и всем желающим. "</string>
    <string name="share">Поделиться</string>
    <string name="ok">OK</string>
    <string name="test_category_1">Погода</string>
    <string name="test_category_2">Боду хаво</string>
    <string name="test_phrases_1">Саломатии хонуматон (шавҳаратон) хубаст?</string>
    <string name="test_phrases_2">Как здоровье (самочувствие) супруги (супруга)?</string>
    <string name="test_note">абрикос</string>
    <string name="test_note_id">155</string>

    <!-- Empty list -->
    <string name="no_data">Такого слова нет :(</string>
    <string name="no_data_text_below">Попробуйте ввести другое слово</string>
    <string name="no_data_favorite">Нет избранных слов :(</string>
    <string name="no_data_text_below_favorite">Для того чтобы здесь появились записи выберете слово и нажмите на сердечко</string>

    <!-- Type of translate -->
    <string name="choose_lang">Направление перевода:</string>
    <string name="ru_tj_string">RU-TJ</string>
    <string name="empty_box">empty box</string>
    <string name="inter_phrases">Введите фразу</string>
    <string name="touch_1">Скопировать фразу или её перевод</string>
    <string name="touch_2">Скопировать и фразу и её перевод</string>
    <string name="touch_3">Добавить фразу в избранные</string>
    <string-array name="lang">
        <item><string name="any">Любое</string></item>
        <item>TJ-RU</item>
        <item>RU-TJ</item>
        <item>EN-TJ</item>
        <item>TJ-EN</item>
        <item>TJ-TJ</item>
    </string-array>

</resources>