<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/spacing_middle">

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_box"
            android:contentDescription="@string/empty_box" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_middle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data"
            android:textColor="@color/primaryText"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_data_text_below"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>