<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/spacing_middle"
                    android:paddingBottom="@dimen/spacing_middle">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/spacing_middle"
                        android:layout_toStartOf="@id/btn_lang"
                        android:paddingTop="@dimen/spacing_medium"
                        app:cardCornerRadius="@dimen/spacing_medium"
                        app:cardElevation="0dp">

                        <EditText
                            android:id="@+id/search_word"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="@dimen/spacing_middle"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_search"
                            android:hint="@string/inter_word"
                            android:paddingEnd="@dimen/spacing_middle"
                            android:singleLine="true"
                            android:textColorHint="@color/secondaryText" />

                    </androidx.cardview.widget.CardView>

                    <Button
                        android:id="@+id/btn_lang"
                        style="@style/LangButtonStyle"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="@dimen/spacing_middle"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:background="@drawable/border_bg"
                        android:text="@string/ru_tj_string"
                        android:textColor="@color/colorPrimary"
                        app:icon="@drawable/ic_replace"
                        app:iconTint="@color/colorPrimary" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/spacing_middle">

                    <Button
                        android:id="@+id/letter_1"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/letter_1"
                        android:textColor="@android:color/white" />


                    <Button
                        android:id="@+id/letter_2"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/letter_2"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/letter_3"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/letter_3"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/letter_4"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/letter_4"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/letter_5"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:layout_marginEnd="@dimen/spacing_middle"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/letter_5"
                        android:textColor="@android:color/white" />

                    <Button
                        android:id="@+id/letter_6"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="40dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/colorAccent"
                        android:text="@string/letter_6"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_word_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_panel"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:listitem="@layout/word_item" />

    <include
        android:id="@+id/layout_no_data"
        layout="@layout/layout_no_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>