<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.phrasebook.category.CategoryActivity">

    <RelativeLayout
        android:id="@+id/category_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/spacing_medium"
        android:paddingBottom="@dimen/spacing_medium">

        <LinearLayout
            android:id="@+id/category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_large"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/category_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/phrasebook"
                android:src="@drawable/ic_test_category" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_large"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/category_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/test_category_1"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/category_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:gravity="center"
                    android:text="@string/test_category_2"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/category_title"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_middle"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:paddingTop="@dimen/spacing_medium"
            app:cardCornerRadius="@dimen/spacing_medium"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/search_phrases"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/spacing_middle"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_search"
                android:hint="@string/inter_phrases"
                android:paddingEnd="@dimen/spacing_middle"
                android:singleLine="true"
                android:textColorHint="@color/secondaryText" />

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/Widget.MaterialComponents.TabLayout.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/category_panel"
        app:tabMode="scrollable" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tab_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/phrases_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/category_panel"
        android:visibility="gone"
        tools:listitem="@layout/phrase_item" />

</RelativeLayout>